<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/OScreenBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="RtlSymmetry">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginnConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOfFacebookLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/facebook_button"
                android:drawableStart="@drawable/ic_facebook"
                android:drawablePadding="-50dp"
                android:paddingStart="15dp"
                android:text="@string/loginWithFacebook"
                android:textAllCaps="false"
                android:textColor="@color/facebookButtonColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="@color/userFollowerCountColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOfFacebookLogin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInfoEPosta"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtOfEposta"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="E-Posta / Kullanıcı Adı"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInfoPassword"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfoEPosta"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/toolbarBackgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtOfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/muli_regular"
                android:text="@string/forgotPassword"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfoPassword" />

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_button_green"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

            <TextView
                android:id="@+id/versionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/appVersion"
                android:textColor="@color/userFollowerCountColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <!--<com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avlIndicatorProgress"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:indicatorColor="@color/constProgressColor"
        app:indicatorName="BallSpinFadeLoaderIndicator"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avlIndicatorProgress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/progress" />

</androidx.constraintlayout.widget.ConstraintLayout>
