<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/OScreenBackground">

    <include
        android:id="@+id/toolBar4ForgetPassword"
        layout="@layout/toolbar_without_onedio_icon" />

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/forgettConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/forgotPassword"
                    style="@style/OTextViewPopularCommentTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/txtInfoForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/forgetPasswordInfo"
                    style="@style/OTextViewPopularCommentText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

            <EditText
                    android:id="@+id/edtOfEposta"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/ePosta"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInfoForgotPassword" />

            <Button
                    android:id="@+id/sendEmailForgotPassword"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="220sp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/custom_button_green"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/constWhite"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtOfEposta" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avlIndicatorProgress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/progress" />


    <!--<com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avlIndicatorProgress"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:indicatorColor="@color/tabSelectedIndicator"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
