<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/changePasswordConstraint"
        android:layout_width="match_parent"
        style="@style/OScreenBackground"
        android:layout_height="match_parent">

    <include
            android:id="@+id/toolBar4ChangePassword"
            layout="@layout/toolbar_without_onedio_icon" />

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/changePasswordConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtOfOldPasswordInfo"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/toolbarBackgroundColor">

                <EditText
                        android:id="@+id/edtOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:background="@null"
                        android:textSize="14dp"
                        android:hint="@string/oldPassword"
                        android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtOfNewPasswordInfo"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtOfOldPasswordInfo"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/toolbarBackgroundColor">

                <EditText
                        android:id="@+id/edtNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:background="@null"
                        android:textSize="14dp"
                        android:hint="@string/newPassword"
                        android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtOfNewPasswordInfoVerify"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtOfNewPasswordInfo"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/toolbarBackgroundColor">

                <EditText
                        android:id="@+id/edtNewPasswordVerify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:background="@null"
                        android:textSize="14dp"
                        android:hint="@string/newPasswordAgain"
                        android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                    android:id="@+id/changePassword"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:background="@drawable/custom_button_blue"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtOfNewPasswordInfoVerify" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <!--<com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avlIndicatorProgress"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:visibility="invisible"
            app:indicatorColor="@color/buttonBackgroundColorBlue"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avlIndicatorProgress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/progress" />
</androidx.constraintlayout.widget.ConstraintLayout>